--- a/TSP-MinDistance-GA/index.html
+++ b/TSP-MinDistance-GA/index.html
@@ -13,27 +13,14 @@
 
 <body>
   <div class="topnav" id="myTopnav">
-    <a href="#" class="active">Home</a>
-    <a href="https://github.com/jitendrabhamare/p5js_sketch/tree/gh-pages/TSP-MinDistance-GA">ReadMe</a>
+    <!--<a href="#" class="active">Home</a>-0-->
+    <!--<a href="https://github.com/jitendrabhamare/p5js_sketch/tree/gh-pages/TSP-MinDistance-GA">ReadMe</a>-->
 
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+    <a href="#">Traveling Salesman Problem</a>
+
+    
   </div>
   
-  
-
-  
-
-
-
-
-
-
-  <p id="header1"></p>
-  <p id="header2"></p>
-  <p id="header3"></p>
-
   <script src="ga.js"></script>
   <script src="sketch.js"></script>
 
